# blacksheep-clean-architecture

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  settings.toml
.github/actions/: ci.yml
application/application_services/dto/: auth_response.py  form_data.py  issued_token.py  token_request.py  user_dto.py
application/cqrs_lib/: command.py  handler.py  query.py  result.py
application/cqrs_lib/extensibility/: decorators.py
application/cqrs_lib/mediator/: impl.py  interface.py
application/use_cases/: base.py
application/use_cases/interactor/: mediator.py
application/use_cases/interfaces/: mediator.py
application/use_cases/validation/: validation_decorator.py
deploy/: Application.dockerfile  Database.dockerfile  docker-compose.yaml
deploy/config/: postgresql.conf
deploy/k8s/: backend-deployment.yaml  backend-service.yaml  nginx-deployment.yaml
deploy/plain-docker/: Application.dockerfile  Database.dockerfile  docker-compose.yaml
entities/domain_services/implementation/: order_service.py
entities/domain_services/interfaces/: order_service.py
entities/models/: order.py  order_item.py  product.py  user.py
infrastructure/implementation/database/: alembic.ini
infrastructure/implementation/delivery/: delivery_service.py
infrastructure/interfaces/delivery/: delivery_service.py
infrastructure/interfaces/integration/: email_service.py
src/application/cqrs_lib/: __init__.py  command.py  exceptions.py  handler.py
src/domain/entities/: base.py  order.py  product.py  user.py
src/entities/models/: order.py  user.py
src/utils/: errors_wrapper.py  exceptions.py  password_hashing.py  type_casts.py
src/utils/cqrs_lib/: exceptions.py  handler.py
src/web/: bootstrap.py  events.py  factories.py
src/web/.mypy_cache/: missing_stubs
src/web/dto/: oauth_input.py
src/web/middlewares/: logging_middleware.py
tests/: pytest.ini
tests/functional/: conftest.py  test_api.py
use_cases/interactor/: mediator.py
utils/: dependency_injection.py  routing.py
utils/logging/: gunicorn.py
utils/security/: password_hashing.py
utils/validation/: validation_decorator.py
web/: boostrap.py  bootstrap.py  constants.py  events.py
web/controllers/: __init__.py  base.py  oauth.py  order.py
web/dto/: oauth_input.py
web/middlewares/: logging_middleware.py
web/utils/: gunicorn_app.py  routing.py  serializers.py
web/web_utils/: gunicorn_app.py  routing.py
(+131 files in other folders)
