[tool.poetry]
name = "clean_architecture_fastapi"
version = "1.0beta"
description = ""
authors = ["Gleb Garanin <glebgar567@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kink = "^0.6.2"
fastapi = "^0.70.0"
injector = "^0.18.4"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
asyncpg = "^0.24.0"
Inject = "^4.3.1"
dynaconf = { version="^3.1.7", extras=["all"] }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
mypy = "^0.910"
sqlalchemy2-stubs = "^0.0.2-alpha.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
